[workspace]
members = ["xc3_lib", "xc3_tex", "xc3_test", "xc3_shader", "xc3_write", "xc3_write_derive", "xc3_wgpu", "xc3_viewer", "xc3_model", "xc3_wgpu_batch", "xc3_gltf"]
resolver = "2"

[workspace.dependencies]
glam = "0.29.2"
wgpu = "24.0.1"
log = "0.4.22"
image_dds = { version = "0.7.1", default-features = false }
indexmap = "2.1.0"
rayon = "1.8.1"
globwalk = "0.9.1"
binrw = "0.14.1"
smol_str = "0.3.2"
simple_logger = "5.0.0"
clap = "4.2.7"
approx = "0.5.1"
pretty_assertions = "1.4.0"
tracing = "0.1.0"
tracing-subscriber = "0.3.0"
thiserror = "2.0.0"
anyhow = "1.0.0"
indoc = "2.0.0"