[package]
name = "xc3_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
xc3_lib_derive = { path = "../xc3_lib_derive" }
binrw = "0.11.2"
flate2 = "1.0"
zune-inflate = "0.2.0"
anyhow = "1.0"
tegra_swizzle = "0.3.1"
ddsfile = "0.5.1"
bilge = "0.1.4"
log = "0.4.19"
murmur3 = "0.5.2"
image_dds = { git = "https://github.com/ScanMountGoat/image_dds", rev ="7aeea27", default_features = false, features = ["ddsfile" ] }
