[package]
name = "xc3_lib"
version = "0.10.0"
authors = ["ScanMountGoat <>"]
description = "Xenoblade Chronicles file format library"
license = "MIT"
documentation = "https://docs.rs/xc3_lib"
repository = "https://github.com/ScanMountGoat/xc3_lib"
readme = "../README.md"
edition = "2021"

[dependencies]
xc3_write = { version = "0.10.0", path = "../xc3_write" }
image_dds = { version = "0.5.0", default-features = false, features = ["ddsfile"] }
image = { version = "0.24.9", default-features = false}
binrw = "0.14.0"
flate2 = "1.0"
zune-inflate = "0.2.0"
zstd = "0.13.1"
thiserror = "1.0"
tegra_swizzle = "0.3.1"
wiiu_swizzle = "0.3.0"
bilge = "0.2.0"
log = "0.4.19"
murmur3 = "0.5.2"
lzf = "1.0.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
indexmap = "2.1.0"
rayon = "1.8.1"

[dev-dependencies]
hexlit = "0.5.5"
