[package]
name = "xc3_lib"
version = "0.17.0"
authors = ["ScanMountGoat <>"]
description = "Xenoblade Chronicles file format library"
license = "MIT"
documentation = "https://docs.rs/xc3_lib"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2021"

[dependencies]
xc3_write = { version = "0.17.0", path = "../xc3_write" }
image_dds = { workspace = true, default-features = false, features = ["ddsfile"] }
image = { version = "0.25.2", optional = true }
binrw.workspace = true
flate2 = "1.0"
zune-inflate = "0.2.0"
zstd = "0.13.1"
thiserror.workspace = true
tegra_swizzle = "0.4.0"
wiiu_swizzle = "0.3.0"
bilge = "0.2.0"
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

murmur3 = "0.5.2"
lzf = "1.0.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
indexmap.workspace = true
rayon.workspace = true

[dev-dependencies]
hexlit = "0.5.5"
