[package]
name = "xc3_model"
version = "0.9.0"
authors = ["ScanMountGoat <>"]
description = "High level library for xc3_lib"
license = "MIT"
documentation = "https://docs.rs/xc3_model"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2021"

[dependencies]
xc3_lib = { version = "0.9.0", path = "../xc3_lib" }
glam = { version = "0.27.0", features = ["bytemuck"] }
gltf = { version = "=1.3.0", features = ["extras", "KHR_texture_transform"], optional = true }
gltf-json = { version = "=1.3.0", optional = true }
binrw = "0.13.3"
image_dds = "0.5.0"
rayon = "1.8.1"
log = "0.4.19"
ordered-float = { version = "4.1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.1.0", features = ["serde", "rayon"] }
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
hexlit = "0.5.5"
pretty_assertions = "1.4.0"
hex = "0.4.3"
approx = "0.5.1"

[features]
arbitrary = ["dep:arbitrary", "xc3_lib/arbitrary", "indexmap/arbitrary", "ordered-float/arbitrary"]
gltf = ["dep:gltf", "dep:gltf-json"]
