[package]
name = "xc3_model"
version = "0.20.0"
authors = ["ScanMountGoat <>"]
description = "High level library for xc3_lib"
license = "MIT"
documentation = "https://docs.rs/xc3_model"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2024"

[dependencies]
xc3_lib = { version = "0.20.0", path = "../xc3_lib", features = ["image"] }
glam = { workspace = true, features = ["bytemuck"] }
gltf = { version = "=1.4.1", features = ["extras", "KHR_texture_transform"], optional = true }
gltf-json = { version = "=1.4.1", optional = true }
binrw.workspace = true
image_dds = { workspace = true, default-features = true }
rayon.workspace = true
log.workspace = true
tracing.workspace = true
ordered-float.workspace = true
serde_json = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["rayon"] }
thiserror.workspace = true
arbitrary = { version = "1.0", features = ["derive"], optional = true }
smol_str.workspace = true
varint-rs = "=2.2.0"
crc32fast = "1.4.2"
ahash = "0.8.11"
strum.workspace = true

[dev-dependencies]
hexlit = "0.5.5"
pretty_assertions.workspace = true
hex = "0.4.3"
approx.workspace = true

[features]
arbitrary = ["dep:arbitrary", "xc3_lib/arbitrary", "indexmap/arbitrary", "ordered-float/arbitrary"]
gltf = ["dep:gltf", "dep:gltf-json", "dep:serde_json"]
