[package]
name = "xc3_shader"
version = "0.20.0"
edition = "2021"

[dependencies]
xc3_lib = { path = "../xc3_lib", optional = true }
xc3_model = { path = "../xc3_model", optional = true }
rayon.workspace = true
globwalk.workspace = true
clap = { workspace = true, features = ["derive"] }
glsl-lang = { version = "0.7.2", features = ["lexer-v2-full"] }
serde_json = "1.0"
log.workspace = true
simple_logger.workspace = true
bimap = "0.6.3"
pest = { version = "2.7.11", optional = true }
pest_derive = { version = "2.7.11", optional = true }
from-pest = { version = "0.3.3", optional = true }
pest-ast = { version = "0.3.5", optional = true }
approx.workspace = true
ordered-float.workspace = true
smol_str.workspace = true
indexmap.workspace = true
indoc.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true

[features]
default = ["xc3"]
xc3 = ["dep:xc3_lib", "dep:xc3_model", "dep:pest", "dep:pest_derive", "dep:from-pest", "dep:pest-ast"]
