[package]
name = "xc3_shader"
version = "0.20.0"
edition = "2021"

[dependencies]
xc3_lib = { path = "../xc3_lib", optional = true }
xc3_model = { path = "../xc3_model", optional = true }
rayon.workspace = true
globwalk.workspace = true
clap = { workspace = true, features = ["derive"] }
glsl-lang = { version = "0.7.2", features = ["lexer-v2-full"] }
serde_json = "1.0"
log.workspace = true
simple_logger.workspace = true
bimap = "0.6.3"
pest = "2.7.11"
pest_derive = "2.7.11"
from-pest = "0.3.3"
pest-ast = "0.3.5"
approx.workspace = true
ordered-float.workspace = true
smol_str.workspace = true
indexmap.workspace = true
indoc.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true

[features]
default = ["xc3"]
xc3 = ["dep:xc3_lib", "dep:xc3_model"]
