[package]
name = "xc3_shader"
version = "0.21.0"
edition = "2024"

[dependencies]
xc3_lib = { path = "../xc3_lib", optional = true }
xc3_model = { path = "../xc3_model", optional = true }
rayon.workspace = true
globwalk.workspace = true
clap = { workspace = true, features = ["derive"] }
glsl-lang = { version = "0.8.0", optional = true }
serde_json.workspace = true
log.workspace = true
simple_logger.workspace = true
bimap = "0.6.3"
peg = { version = "0.8.5", optional = true }
approx.workspace = true
ordered-float.workspace = true
smol_str.workspace = true
indexmap.workspace = true
indoc.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }
ahash.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true

[features]
default = ["xc3"]
xc3 = ["dep:xc3_lib", "dep:xc3_model", "glsl", "latte"]
glsl = ["dep:glsl-lang"]
latte = ["dep:peg"]
serde = ["dep:serde", "smol_str/serde", "ordered-float/serde"]
tracing = ["tracing-subscriber", "tracing-tracy"]

