[package]
name = "xc3_test"
version = "0.17.0"
edition = "2021"

[dependencies]
xc3_lib = { path = "../xc3_lib", features = ["image"] }
xc3_write = { path = "../xc3_write" }
xc3_model = { path = "../xc3_model", features = ["gltf"] }
clap = { workspace = true, features = ["derive"] }
rayon.workspace = true
globwalk.workspace = true
binrw.workspace = true
glam = { workspace = true, features = ["approx"] }
approx.workspace = true
log.workspace = true
simple_logger.workspace = true
