[package]
name = "xc3_tex"
version = "0.11.0"
edition = "2021"

[dependencies]
xc3_lib = { path = "../xc3_lib" }
image_dds = { version = "0.6.0", features = ["strum"] }
clap = { version = "4.2.7", features = ["derive", "string"] }
binrw = "0.14.0"
strum = "0.26.1"
anyhow = "1.0"
log = "0.4.19"
simple_logger = "4.2.0"
