[package]
name = "xc3_tex"
version = "0.19.0"
edition = "2021"

[dependencies]
xc3_lib = { path = "../xc3_lib", features = ["image"] }
image_dds = { workspace = true, default-features = true, features = ["strum"] }
clap = { workspace = true, features = ["derive", "string"] }
binrw.workspace = true
strum = "0.26.1"
anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
globwalk.workspace = true
rayon.workspace = true
