[package]
name = "xc3_viewer"
version = "0.17.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
wgpu.workspace = true
winit = { version = "0.29.4", features = ["rwh_05"] }
glam.workspace = true
xc3_wgpu = { path = "../xc3_wgpu" }
xc3_model = { path = "../xc3_model" }
log.workspace = true
simple_logger.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { version = "0.10.4", optional = true }
anyhow.workspace = true

[features]
tracing = ["tracing-subscriber", "tracing-tracy"]
