[package]
name = "xc3_viewer"
version = "0.21.0"
edition = "2024"

[dependencies]
futures.workspace = true
wgpu.workspace = true
winit = { version = "0.29.4", features = ["rwh_05"] }
glam.workspace = true
xc3_wgpu = { path = "../xc3_wgpu" }
xc3_model = { path = "../xc3_model" }
log.workspace = true
simple_logger.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }
anyhow.workspace = true

[features]
tracing = ["tracing-subscriber", "tracing-tracy"]
