[package]
name = "xc3_viewer"
version = "0.22.0"
edition = "2024"

[dependencies]
xc3_wgpu = { path = "../xc3_wgpu" }
xc3_model = { path = "../xc3_model" }
futures.workspace = true
wgpu.workspace = true
winit = "0.30.13"
glam.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
anyhow.workspace = true

[features]
tracy = ["tracing-tracy"]
