[package]
name = "xc3_wgpu"
version = "0.19.0"
authors = ["ScanMountGoat <>"]
description = "Xenoblade Chronicles model rendering library"
license = "MIT"
documentation = "https://docs.rs/xc3_wgpu"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2021"

[dependencies]
wgpu.workspace = true
xc3_model = { version = "0.19.0", path = "../xc3_model" }
xc3_lib = { version = "0.19.0", path = "../xc3_lib" }
bytemuck = { version = "1.13", features = [ "derive" ] }
glam = { workspace = true, features = ["bytemuck"] }
encase = { version = "0.10.0", features = ["glam"] }
rayon.workspace = true
log.workspace = true
tracing.workspace = true
indexmap.workspace = true
smol_str.workspace = true
indoc.workspace = true

[build-dependencies]
wgsl_to_wgpu = "0.13.0"
