[package]
name = "xc3_wgpu_batch"
version = "0.7.0"
edition = "2021"

[dependencies]
xc3_wgpu = { path = "../xc3_wgpu" }
xc3_model = { path = "../xc3_model" }
wgpu = "0.19.0"
futures = "0.3.27"
futures-intrusive = "0.4.0"
globwalk = "0.9.1"
log = "0.4.19"
simple_logger = "4.2.0"
image = "0.24.5"
glam = "0.25.0"
clap = { version = "4.2.7", features = ["derive"] }
