[package]
name = "xc3_wgpu_batch"
version = "0.15.0"
edition = "2021"

[dependencies]
xc3_wgpu = { path = "../xc3_wgpu" }
xc3_model = { path = "../xc3_model" }
wgpu.workspace = true
futures = "0.3.27"
futures-intrusive = "0.4.0"
globwalk.workspace = true
log.workspace = true
simple_logger.workspace = true
image = "0.25.2"
glam.workspace = true
clap = { workspace = true, features = ["derive"] }
