[package]
name = "xc3_write"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
description = "xc3_lib binary writing and layout"
license = "MIT"
documentation = "https://docs.rs/xc3_write"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2021"

[dependencies]
binrw = "0.11.2"
xc3_write_derive = { path = "../xc3_write_derive" }
