[package]
name = "xc3_write"
version = "0.20.0"
authors = ["ScanMountGoat <>"]
description = "xc3_lib binary writing and layout"
license = "MIT"
documentation = "https://docs.rs/xc3_write"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2021"

[dependencies]
xc3_write_derive = { version = "0.20.0", path = "../xc3_write_derive" }
indexmap.workspace = true

[dev-dependencies]
hexlit = "0.5.5"
pretty_assertions.workspace = true
hex = "0.4.3"
