[package]
name = "xc3_write_derive"
version = "0.18.0"
authors = ["ScanMountGoat <>"]
description = "xc3_write derive macros"
license = "MIT"
documentation = "https://docs.rs/xc3_write_derive"
repository = "https://github.com/ScanMountGoat/xc3_lib"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1.0"
proc-macro2 = "1.0"
